Fix yaml duplicated key

--- a/stroom/setup_stroom_hosts.yml
+++ b/stroom/setup_stroom_hosts.yml
@@ -42,9 +42,8 @@
         - "{{ stroom_auth_ui_https_port | default(9443) }}"
       notify:
         - Restart docker
-        
+
     - name: Opening mySQL stack TCP port to public zone in firewalld
-      when: no_firewalld is undefined
       firewalld:
         port: "{{ item }}/tcp"
         zone: public
@@ -55,11 +54,11 @@
         - "{{ stroom_all_dbs_port | default(3307) }}"
       notify:
         - Restart docker
-      when: 
+      when:
         - mixed_cluster == 'false' or   mixed_cluster is not defined      # is false or not defined
+        - no_firewalld is undefined
 
     - name: Opening mySQL cluster Stroom DB TCP port to public zone in firewalld
-      when: no_firewalld is undefined
       firewalld:
         port: "{{ item }}/tcp"
         zone: public
@@ -70,9 +69,10 @@
         - "{{ stroom_db_port | default(3306) }}"
       notify:
         - Restart docker
-      when: 
+      when:
         - mixed_cluster is defined
         - mixed_cluster == 'true' # is true
+        - no_firewalld is undefined
 
       # TODO The ports we need are dependant on what is in the stack
       # so we ought to only open the required ports
@@ -93,8 +93,8 @@
 
   handlers:
     - name: Restart docker
-      service: 
-        name: docker 
+      service:
+        name: docker
         state: restarted
 
 
