--- a/stroom/roles/setup/java/vars/main.yml
+++ b/stroom/roles/setup/java/vars/main.yml
@@ -49,8 +49,8 @@ _java:
   21:
     targz: "OpenJDK21U-jdk_x64_linux_hotspot_21.0.1_12.tar.gz"
     url: "{{ java_21_alt_url | default('https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.1%2B12/OpenJDK21U-jdk_x64_linux_hotspot_21.0.1_12.tar.gz') }}"
-    directory: "jdk-21.0.1"
-    home_dir: "{{ java_unarchive_dest }}/jdk-21.0.1"
+    directory: "jdk-21.0.1+12"
+    home_dir: "{{ java_unarchive_dest }}/jdk-21.0.1+12"
 
 
 # Java 6,7,8,11 stuff
@@ -62,13 +62,8 @@ java_archive_filename: "{{ _java[java_version | int].tar.gz | default([]) }}"
 java_archive_url: "{{ _java[java_version | int].url | default([]) }}"
 java_archive_directory: "{{ _java[java_version | int].directory | default([]) }}"
 
-{% if java_version < 21 %}
-  java_archive_sha256_url: "{{ java_archive_url }}.sha256"
-{% else %}
-  java_archive_sha256_url: "{{ java_archive_url }}.sha256.txt"
-{% endif %}
-
-java_archive_sha256_value: "{{ lookup('url', java_archive_sha256_url) | default([]) }}"
+java_archive_sha256_url: "{% if java_version < 21 %}{{ java_archive_url }}.sha256{% else %}{{ java_archive_url }}.sha256.txt{% endif %}"
+java_archive_sha256_value: "{% if java_version < 21 %}{{ lookup('url', java_archive_sha256_url) | default([]) }}{% else %}{{ lookup('url', java_archive_sha256_url).split(' ')[0] }}{% endif %}"
 
 java_home_dir: "{{ _java[java_version | int].home_dir | default([]) }}"
 java_bin_dir: "{{ java_home_dir }}/bin"
