--- a/stroom/roles/non_docker_stroom/download/defaults/main.yml
+++ b/stroom/roles/non_docker_stroom/download/defaults/main.yml
@@ -6,3 +6,5 @@ downloads_dir: "/tmp/stroom_downloads"
 
 stroom_archive_filename: "stroom-app-{{ stroom_version }}.zip"
 stroom_url: "https://github.com/gchq/stroom/releases/download/{{ stroom_version }}/{{ stroom_archive_filename }}"
+stroom_archive_checksum_type: 'sha256'
+stroom_archive_checksum_url: '{{ stroom_url }}.{{ stroom_archive_checksum_type }}'
