Allow user to set stroom_proxy_temp_dir separately to stroom_temp_dir if needed

--- a/stroom/roles/non_docker_proxy/update_config/tasks/main.yml
+++ b/stroom/roles/non_docker_proxy/update_config/tasks/main.yml
@@ -1,8 +1,12 @@
 ---
 
-- name: Ensure directory {{ stroom_temp_dir }} exists
+- name: Discover temp directory
+  set_fact:
+    temp_dir: "{{ stroom_proxy_temp_dir | default (stroom_temp_dir) }}"
+
+- name: Ensure directory {{ temp_dir }} exists
   file:
-    path: "{{ stroom_temp_dir }}"
+    path: "{{ temp_dir }}"
     state: directory
   tags:
     - deploy
