Fix defaults for non-docker-stroom-proxy variables

--- a/stroom/roles/non_docker_proxy/download/defaults/main.yml
+++ b/stroom/roles/non_docker_proxy/download/defaults/main.yml
@@ -2,7 +2,7 @@
 
 downloads_dir: "/tmp/stroom_downloads"
 
-stroom_proxy_archive_filename: "stroom-app-{{ stroom_version }}.zip"
-stroom_proxy_url: "https://github.com/gchq/stroom/releases/download/{{ stroom_version }}/{{ stroom_archive_filename }}"
+stroom_proxy_archive_filename: "stroom-proxy-app-{{ stroom_version }}.zip"
+stroom_proxy_url: "https://github.com/gchq/stroom/releases/download/{{ stroom_version }}/{{ stroom_proxy_archive_filename }}"
 stroom_proxy_archive_checksum_type: 'sha256'
-stroom_proxy_archive_checksum_url: '{{ stroom_url }}.{{ stroom_archive_checksum_type }}'
+stroom_proxy_archive_checksum_url: '{{ stroom_proxy_url }}.{{ stroom_proxy_archive_checksum_type }}'
