Stop it complaining about mixed_cluster not defined

--- a/stroom/install_stack.yml
+++ b/stroom/install_stack.yml
@@ -8,6 +8,8 @@
 
 - name: Setup stroom hosts
   import_playbook: ./setup_stroom_hosts.yml
+  vars: 
+    mixed_cluster: 'false' 
   tags:
     - setup
 
