--- a/stroom/roles/non_docker_proxy/systemd/tasks/main.yml
+++ b/stroom/roles/non_docker_proxy/systemd/tasks/main.yml
@@ -29,7 +29,13 @@
     src: "templates/etc/systemd/system/stroom-proxy.service.j2"
     dest: "/etc/systemd/system/stroom-proxy.service"
 
-- name: SystemD Service enable
+- debug:
+    msg:
+      - "stroom_service_on_boot: {{ stroom_service_on_boot }}"
+      - "stroom_service_state: {{ stroom_service_state }}"
+    verbosity: 2
+
+- name: SystemD Service state
   when: stroom_service_on_boot is defined
   register: stroom_proxy_service_installed
   become: true
@@ -37,11 +43,4 @@
   systemd:
     name: stroom-proxy
     enabled: "{{ stroom_service_on_boot }}"
-
-- name: SystemD Service start
-  when: stroom_service_state is defined
-  become: true
-  become_user: root
-  systemd:
-    name: stroom-proxy
     state: "{{ stroom_service_state }}"
