--- a/config/multi_node_mixed_cluster/vagrant/Vagrantfile
+++ b/config/multi_node_mixed_cluster/vagrant/Vagrantfile
@@ -3,7 +3,7 @@ Vagrant.configure("2") do |config|
   @ip_counter=10
   def get_ip()
     @ip_counter += 1
-    "192.168.100.#{@ip_counter}"
+    "192.168.56.#{@ip_counter}"
   end
 
   # A mixed economy deployment
@@ -34,7 +34,7 @@ Vagrant.configure("2") do |config|
 
   servers.each do |machine|
     config.vm.define machine[:hostname] do |node|
-      node.vm.box = "centos/7"
+      node.vm.box = "rockylinux/9"
       node.vm.hostname = machine[:hostname]
       node.vm.network "private_network", ip: machine[:ip]
 
@@ -47,6 +47,7 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.provision "ansible" do |ansible|
+    ansible.compatibility_mode = "2.0"
     ansible.verbose = "v"
     # Noddy playbook so we can generate an inventory
     ansible.playbook = "vagrant_playbook.yml"
