--- a/stroom/setup_stroom_hosts.yml
+++ b/stroom/setup_stroom_hosts.yml
@@ -55,7 +55,7 @@
       notify:
         - Restart docker
       when:
-        - mixed_cluster == 'false' or   mixed_cluster is not defined      # is false or not defined
+        - mixed_cluster is not defined or mixed_cluster == 'false'  # is false or not defined
         - no_firewalld is undefined
 
     - name: Opening mySQL cluster Stroom DB TCP port to public zone in firewalld
