--- a/stroom/roles/setup/common/tasks/main.yml
+++ b/stroom/roles/setup/common/tasks/main.yml
@@ -8,26 +8,21 @@
 - import_role:
     name: setup/yum_update
 
-# Install EPEL yum repo (for jq install)
-- name: Check if EPEL YUM repo is already configured.
-  become: true
-  stat: path={{ epel_repofile_path }}
-  register: epel_repofile_result
- 
-- name: Install EPEL YUM repo.
+# Install EPEL yum repo (for jq, httpie, htop install)
+- name: YUM install EPEL repo
   become: true
   yum:
-    name: "{{ epel_repo_url }}"
+    name: epel-release
     state: present
-  register: result
-  when: not epel_repofile_result.stat.exists
- 
-- name: Import EPEL GPG key.
+
+  # This is needed to install some things from EPEL, e.g. httpie
+- name: Ensure the crb repository is enabled for el9+ variants
   become: true
-  rpm_key:
-    key: "{{ epel_repo_gpg_key_url }}"
-    state: present
-  when: not epel_repofile_result.stat.exists
+  community.general.dnf_config_manager:
+    name: crb
+    state: enabled
+  when: (ansible_distribution == "CentOS" and ansible_distribution_major_version|int > 8) or
+        (ansible_distribution == "Rocky" and ansible_distribution_major_version|int > 8)
 
 # Install common command line tools
 - name: YUM install various command line tools
