--- a/stroom/roles/stack/update_config/defaults/main.yml
+++ b/stroom/roles/stack/update_config/defaults/main.yml
@@ -4,4 +4,4 @@ stack_home_dir: "{{ stack_install_root_dir }}/{{ stack_name }}/{{ stack_name }}-
 stack_config_dir: "{{ stack_home_dir }}/config"
 stack_volumes_dir: "{{ stack_home_dir }}/volumes"
 stack_env_var_file: "{{ stack_config_dir }}/{{ stack_name }}.env"
-config_files_and_templates_dir: "{{ local_config_dir }}/files_and_templates/volumes"
+files_and_templates_dir: "{{ local_config_dir }}/files_and_templates"
